mod-add: procedure__slides-buttons. fix: text last slide visibilitys in procedure__slider

--- a/css/global.css
+++ b/css/global.css
@@ -5,7 +5,6 @@ body {
 }
 .wrapper {
   max-width: 100vw;
-  overflow: hidden;
 }
 .container {
   max-width: 90rem;
