--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,23 @@
   margin-top: 3.1875rem;
 }
 .procedure__slider {
-  width: 100%;
+  /* width: 100%; */
+}
+.procedure__slides-buttons {
+  display: none;
+  visibility: hidden;
+  align-items: center;
+  justify-content: flex-end;
+}
+.procedure__slide-button-prev,
+.procedure__slide-button-next {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #5c8ee5;
+  width: 60px;
+  height: 40px;
+  flex-shrink: 0;
 }
 .steps {
   display: flex;
@@ -256,8 +272,7 @@
 }
 .steps__item {
   position: relative;
-  /* max-width: 20.625rem !important; */
-  overflow: hidden;
+  max-width: 18.75rem;
 }
 .steps__num {
   display: flex;
@@ -274,7 +289,7 @@
   content: "";
   display: inline-block;
   width: 100%;
-  max-width: 260px;
+  max-width: 16.25rem;
   margin-left: 30px;
   height: 1px;
   background-color: #ebebf0;
@@ -467,6 +482,16 @@
     display: flex;
   }
 }
+@media (max-width: 1000px) {
+  .steps__item {
+    max-width: none;
+  }
+  .procedure__slides-buttons {
+    display: flex;
+    visibility: visible;
+    gap: 0;
+  }
+}
 @media (max-width: 760px) {
   .navbar__phone {
     display: none;
@@ -528,6 +553,6 @@
   }
   .steps__text {
     font-size: 14px;
-    max-width: 100%;
+    max-width: 300px;
   }
 }
